--- a/src/form/AutoFormBundle/Resources/views/forms/form_tamplet.html.twig
+++ b/src/form/AutoFormBundle/Resources/views/forms/form_tamplet.html.twig
@@ -2,10 +2,12 @@
     {% if form.contents %}
         {% for content in form.contents %}
             {% if content.row %}<div{% for Key,value in content.row %} {{ key }} ="{{ value }}" {% endfor %}>{% endif %}
-                {% for colonne in content.cols %}
-                    {% if colonne.col %}<div{% for key,value in colonne.col %} {{ key }}="{{ value }}" {% endfor %}>{% endif %}
-
-                    {% if colonne.col %}</div>{% endif %}
+                {% for column in content.cols %}
+                    {% if column.col %}<div{% for key,value in column.col %} {{ key }}="{{ value }}" {% endfor %}>{% endif %}
+                    {% for field in column.fields  %}
+                        {{ field | raw }}
+                    {% endfor %}
+                    {% if column.col %}</div>{% endif %}
                 {% endfor %}
             {% if content.row %}</div>{% endif %}
         {% endfor %}
